Add database server resource

--- a/config/samples/stroom_v1_stroomcluster.yaml
+++ b/config/samples/stroom_v1_stroomcluster.yaml
@@ -28,6 +28,7 @@ spec:
       resources: {}
       podAnnotations: {}
       podSecurityContext: {}
+      securityContext: {}
       nodeSelector: {}
       tolerations: []
       affinity: {}
