Change ConfigMapRef to ConfigMapName

--- a/config/samples/stroom_v1_stroomcluster.yaml
+++ b/config/samples/stroom_v1_stroomcluster.yaml
@@ -7,7 +7,7 @@ spec:
     repository: gchq/stroom
     tag: v7
   extraEnv: {}
-  configMapRef: {}
+  configMapName: ""
   appDatabaseRef: {}
   statsDatabaseRef: {}
   ingress: {}
