--- a/config/samples/stroom_v1_stroomcluster.yaml
+++ b/config/samples/stroom_v1_stroomcluster.yaml
@@ -10,7 +10,10 @@ spec:
   configMapName: ""
   appDatabaseRef: {}
   statsDatabaseRef: {}
-  ingress: {}
+  ingress:
+    hostName: ""
+    secretName: ""
+    className: nginx
 
   nodeSets:
     - name: data
