--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -67,6 +67,18 @@ rules:
   - update
   - watch
 - apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
   - stroom.gchq.github.io
   resources:
   - databaseservers
